update api witness and cancle case
